Fixed bug where horizontal scrolling was possible. It is now only possible to go to other conversations using the arrows on the page and with the user pictures at the bottom of the page.

--- a/style/chat.css
+++ b/style/chat.css
@@ -1,17 +1,16 @@
+html {
+	overflow: hidden;
+}
 
 #main {
 	margin:auto;
 
 	width:100%;
 	height:100%;
-
-	overflow-x:hidden;
-	overflow-y:hidden;
 }
 
 table#conversations_table {
 	height:100%;
-	overflow-y:hidden;
 	position:absolute;
 }
 
